--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "jscoverage": "*",
+    "jsl": "*"
   },
   "optionalDependencies": {},
   "engines": {
