--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "main": "./index",
   "dependencies": {
-    "request": "2.12.0"
+    "request": "^2.12.0"
   },
   "devDependencies": {
     "mocha": "*",
