--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.4",
     "gulp-mocha": "^2.2.0",
     "json5": "^0.5.0",
     "nock": "^8.0.0"
