--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     }
   ],
   "dependencies": {
-    "lodash": "^4.13.1",
+    "lodash": "^4.14.0",
     "query-string": "^4.2.2",
-    "request": "^2.73.0"
+    "request": "^2.74.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -47,10 +47,11 @@
     "gulp-eslint": "^3.0.1",
     "gulp-istanbul": "^1.0.0",
     "gulp-mocha": "^2.2.0",
-    "hotdoc": "^0.7.0",
+    "hotdoc": "^0.7.1",
     "jsdoc": "^3.4.0",
     "json5": "^0.5.0",
-    "nock": "^8.0.0"
+    "nock": "^8.0.0",
+    "semver": "^5.3.0"
   },
   "files": [
     "/lib",
