--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "generate-docs": "rm -rf gh-pages && node_modules/.bin/jsdoc -c jsdoc.json",
     "gh-pages": "git subtree push --prefix=gh-pages origin gh-pages",
-    "test": "gulp"
+    "test": "eslint lib test && nyc mocha",
+    "lint": "eslint lib test",
+    "mocha": "mocha"
   },
   "engines": {
-    "node": ">=0.12.0"
+    "node": ">=6"
   },
   "homepage": "https://github.com/tumblr/tumblr.js",
   "repository": {
@@ -37,21 +39,20 @@
     }
   ],
   "dependencies": {
-    "lodash": "^4.14.0",
-    "query-string": "^4.2.2",
-    "request": "^2.74.0"
+    "lodash": "^4.17.10",
+    "query-string": "^6.1.0",
+    "request": "^2.87.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1",
-    "gulp-istanbul": "^1.0.0",
-    "gulp-mocha": "^2.2.0",
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
     "hotdoc": "^0.7.1",
     "jsdoc": "^3.4.0",
-    "json5": "^0.5.0",
-    "nock": "^8.0.0",
-    "semver": "^5.3.0"
+    "json5": "^1.0.1",
+    "mocha": "^5.2.0",
+    "nock": "^9.2.6",
+    "nyc": "^11.8.0",
+    "semver": "^5.5.0"
   },
   "files": [
     "/lib",
