--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,9 +33,17 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: npm-${{ matrix.node-version }}-${{ hashFiles('package*.json') }}
+          restore-keys: |
+            npm-${{ matrix.node-version }}-
+
       - name: Install dependencies
         run: |
-          npm install
+          npm install --ignore-scripts
 
       - name: Build
         run: |
