--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tumblr.js",
-  "version": "3.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Official JavaScript client for the Tumblr API",
   "main": "./lib/tumblr",
   "types": "./lib/tumblr.d.ts",
