Add prettier + config

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mocha": "^5.2.0",
     "nock": "^9.2.6",
     "nyc": "^13.3.0",
+    "prettier": "^3.0.0",
     "semver": "^5.5.0"
   },
   "files": [
