--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^16.1.0",
+    "@tsconfig/strictest": "^2.0.1",
     "chai": "^4.1.2",
     "docdash": "^2.0.1",
     "eslint": "^8.45.0",
@@ -56,7 +58,8 @@
     "mocha": "^10.2.0",
     "nock": "^9.2.6",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "typescript": "^5.1.6"
   },
   "files": [
     "/lib",
