Restore runs-on

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,7 @@ on:
 jobs:
   tests:
     name: Testing with Node.js ${{ matrix.node-version }}
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
