--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "docdash": "^2.0.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "jsdoc": "^4.0.2",
