--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "docdash": "^2.0.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
-    "jsdoc": "^3.4.0",
+    "jsdoc": "^4.0.2",
     "json5": "^1.0.1",
     "mocha": "^10.2.0",
     "nock": "^9.2.6",
