--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,12 @@
 {
-  "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node16/tsconfig.json"]
+  "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node16/tsconfig.json"],
+  "compilerOptions": {
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "rootDir": "lib",
+    "moduleResolution": "node16",
+
+    "noUncheckedIndexedAccess": false
+  },
+  "files": ["lib/tumblr.js"]
 }
