--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
   "env": {
     "node": true,
     "commonjs": true,
-    "es2018": true
+    "es2020": true
   },
   "rules": {
     "no-console": "error"
@@ -13,7 +13,7 @@
     {
       "files": ["./test/**/*"],
       "env": {
-        "jest": true
+        "mocha": true
       }
     }
   ]
