--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   "devDependencies": {
     "@tsconfig/node16": "^16.1.0",
     "@tsconfig/strictest": "^2.0.1",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
     "chai": "^4.1.2",
     "docdash": "^2.0.1",
     "eslint": "^8.45.0",
@@ -59,7 +61,7 @@
     "jsdoc": "^4.0.2",
     "json5": "^2.2.3",
     "mocha": "^10.2.0",
-    "nock": "^9.2.6",
+    "nock": "^13.3.2",
     "nyc": "^15.1.0",
     "prettier": "^3.0.0",
     "typescript": "^5.1.6"
