--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Official JavaScript client for the Tumblr API",
   "main": "./lib/tumblr",
   "types": "./lib/tumblr.d.ts",
+  "exports": {
+    ".": "./lib/tumblr.js"
+  },
   "scripts": {
     "autoformat": "prettier --write .",
     "generate-docs": "rm -rf gh-pages && node_modules/.bin/jsdoc -c jsdoc.json",
