--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,11 @@
   },
   "overrides": [
     {
-      "files": ["./test/**/*"],
+      "files": ["./test/**/*", "./integration/**/*"],
+      "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+      },
       "env": {
         "mocha": true
       }
