--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,7 @@ jobs:
       - name: Run lint
         run: |
           npm run lint
+          npm run format-check
 
       - name: Run tests
         run: |
