Update scripts and workflows

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "generate-docs": "rm -rf gh-pages && node_modules/.bin/jsdoc -c jsdoc.json",
     "gh-pages": "git subtree push --prefix=gh-pages origin gh-pages",
-    "test": "eslint lib test && nyc mocha",
-    "lint": "eslint lib test",
-    "mocha": "mocha"
+    "test": "mocha",
+    "test:coverage": "nyc mocha",
+    "lint": "eslint --report-unused-disable-directives lib test"
   },
   "engines": {
     "node": ">=16",
