--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,3 @@
-# yamllint disable rule:line-length
-# yamllint disable rule:braces
 name: CI
 
 on:
@@ -17,40 +15,32 @@ jobs:
     strategy:
       matrix:
         node-version:
-          - '6.x'
-          - '8.x'
-          - '10.x'
-          - '12.x'
-          - '14.x'
-          - '15.x'
-          - '16.x'
-          - '17.x'
+          - current
+          - lts/*
+          - lts/-1
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: npm-${{ matrix.node-version }}-${{ hashFiles('package*.json') }}
-          restore-keys: |
-            npm-${{ matrix.node-version }}-
+          cache: npm
 
       - name: Install dependencies
         run: |
-          npm install --ignore-scripts
+          npm ci
 
       - name: Build
         run: |
           npm run build --if-present
 
+      - name: Run lint
+        run: |
+          npm run lint
+
       - name: Run tests
         run: |
-          npm test
+          npm run test:coverage
