--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tumblr.js",
-  "version": "3.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Official JavaScript client for the Tumblr API",
   "main": "./lib/tumblr",
   "type": "commonjs",
@@ -47,11 +47,17 @@
     }
   ],
   "dependencies": {
+    "@types/lodash": "^4.0.0",
+    "@types/node": ">=16",
+    "@types/request": "^2.0.0",
     "lodash": "^4.17.11",
-    "query-string": "^6.1.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^16.1.0",
+    "@tsconfig/strictest": "^2.0.1",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
     "chai": "^4.1.2",
     "docdash": "^2.0.1",
     "eslint": "^8.45.0",
@@ -61,7 +67,8 @@
     "mocha": "^10.2.0",
     "nock": "^13.3.2",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "typescript": "^5.1.6"
   },
   "files": [
     "/lib",
