--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,9 +42,9 @@ jobs:
           npm run lint
           npm run format-check
 
-      - name: Run tests
-        run: |
-          npm run test:coverage
+      # - name: Run tests
+      #   run: |
+      #     npm run test:coverage
 
       - name: Run integration tests
         env:
