Continue CI job on error

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ jobs:
   tests:
     name: Testing with Node.js ${{ matrix.node-version }}
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     strategy:
       matrix:
