--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,8 @@ jobs:
 
     strategy:
       matrix:
+        fail-fast: true
+        max-parallel: 1
         node-version:
           - current
           - lts/*
