--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,32 @@ on:
       - master
 
 jobs:
+  lint:
+    name: Linting
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+          cache: npm
+
+      - name: Install dependencies
+        run: |
+          npm ci
+
+      - name: Run lint
+        run: |
+          npm run lint
+
+      - name: Check formatting
+        run: |
+          npm run format-check
+
   tests:
     name: Testing with Node.js ${{ matrix.node-version }}
     runs-on: ubuntu-latest
@@ -38,11 +64,6 @@ jobs:
       - name: Build
         run: |
           npm run build --if-present
-
-      - name: Run lint
-        run: |
-          npm run lint
-          npm run format-check
 
       - name: Run tests
         run: |
