--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: true
+      max-parallel: 1
       matrix:
         node-version:
           - current
