--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "mocha --timeout 100",
     "test:coverage": "nyc npm run test",
     "test:integration": "mocha ./integration/read-only",
-    "test:integration-write": "mocha ./integration/write",
+    "test:integration-write": "mocha ./integration/write --timeout=6000",
     "lint": "eslint --report-unused-disable-directives --ext 'js' --ext 'mjs' lib test integration",
     "prepublishOnly": "tsc --build tsconfig.lib.json --force"
   },
