--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "autoformat": "prettier --write .",
     "format-check": "prettier --check .",
+    "typecheck": "tsc --build tsconfig.json",
     "generate-docs": "rm -rf gh-pages && node_modules/.bin/jsdoc -c jsdoc.json",
     "gh-pages": "git subtree push --prefix=gh-pages origin gh-pages",
     "test": "mocha --timeout 100",
