--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/tumblr/tumblr.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tumblr/tumblr.js.git"
+    "url": "git+https://github.com/tumblr/tumblr.js.git"
   },
   "keywords": [
     "tumblr",
