--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node16/tsconfig.json"],
   "compilerOptions": {
     "composite": true,
