--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,14 @@
   },
   "overrides": [
     {
+      "files": ["lib/**/*.ts"],
+      "parser": "@typescript-eslint/parser"
+      // "parserOptions": {
+      //   "ecmaVersion": "latest",
+      //   "sourceType": "module"
+      // },
+    },
+    {
       "files": ["./test/**/*", "./integration/**/*"],
       "parserOptions": {
         "ecmaVersion": "latest",
