--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -2,6 +2,8 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node16/tsconfig.json"],
   "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
     "composite": true,
     "emitDeclarationOnly": true,
     "declarationMap": true,
@@ -11,5 +13,5 @@
 
     "noUncheckedIndexedAccess": false
   },
-  "files": ["lib/tumblr.js"]
+  "include": ["lib"]
 }
