--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "exports": {
     ".": "./lib/tumblr.js"
   },
+  "types": "./types/tumblr.d.ts",
   "scripts": {
     "autoformat": "prettier --write .",
     "format-check": "prettier --check .",
@@ -75,9 +76,10 @@
     "typescript": "^5.1.6"
   },
   "files": [
-    "CHANGELOG.md",
-    "/lib",
-    "/LICENSE"
+    "/lib/*.*js",
+    "/LICENSE",
+    "/types",
+    "CHANGELOG.md"
   ],
   "volta": {
     "node": "18.17.0",
