Add NPF createPost/editPost (#172)
- Rename legacy create/edit post methods:
  - `createPost` -> `createLegacyPost`
  - `editPost` -> `editLegacyPost`
- Add `createPost` and `editPost` methods for NPF posts
- Add types for NPF post endpoints
- Add integration tests for new `createPost` and `editPost` methods

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,12 +4,16 @@
   "env": {
     "node": true,
     "commonjs": true,
-    "es2020": true
+    "es2022": true
   },
   "rules": {
     "no-console": "error"
   },
   "overrides": [
+    {
+      "files": ["lib/**/*.ts"],
+      "parser": "@typescript-eslint/parser"
+    },
     {
       "files": ["./test/**/*", "./integration/**/*"],
       "parserOptions": {
