--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "exports": {
     ".": "./lib/tumblr.js"
   },
+  "types": "./types/tumblr.d.ts",
   "scripts": {
     "autoformat": "prettier --write .",
     "format-check": "prettier --check .",
@@ -60,6 +61,7 @@
     "@tsconfig/strictest": "^2.0.1",
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
+    "@typescript-eslint/parser": "^6.4.0",
     "chai": "^4.1.2",
     "docdash": "^2.0.1",
     "eslint": "^8.45.0",
@@ -73,9 +75,10 @@
     "typescript": "^5.1.6"
   },
   "files": [
-    "CHANGELOG.md",
-    "/lib",
-    "/LICENSE"
+    "/lib/*.*js",
+    "/LICENSE",
+    "/types",
+    "CHANGELOG.md"
   ],
   "volta": {
     "node": "18.17.0",
