--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -2,14 +2,17 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node16/tsconfig.json"],
   "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
     "composite": true,
     "emitDeclarationOnly": true,
     "declarationMap": true,
     "rootDir": "lib",
+    "outDir": "types",
     "moduleResolution": "node16",
     "types": ["node"],
 
     "noUncheckedIndexedAccess": false
   },
-  "files": ["lib/tumblr.js"]
+  "include": ["lib"]
 }
