--- a/.github/workflows/docs-site.yaml
+++ b/.github/workflows/docs-site.yaml
@@ -3,7 +3,7 @@ name: Deploy documentation site
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ['main', 'new-docs-site']
+    branches: ['main']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
