Set up documentation site for v4 (#191)
Set up documentation site on GitHub pages.

Build with `typedoc` which handles updated TypeScript types much better.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "autoformat": "prettier --write .",
     "format-check": "prettier --check .",
     "typecheck": "tsc --build tsconfig.json",
-    "generate-docs": "rm -rf gh-pages && node_modules/.bin/jsdoc -c jsdoc.json",
-    "gh-pages": "git subtree push --prefix=gh-pages origin gh-pages",
+    "docs-site": "typedoc",
     "lint": "eslint --report-unused-disable-directives --ext 'js' --ext 'mjs' lib test integration",
     "prepublishOnly": "tsc --build tsconfig.lib.json --force",
     "test": "mocha --timeout 100",
@@ -63,14 +62,13 @@
     "@types/mocha": "^10.0.1",
     "@typescript-eslint/parser": "^6.4.1",
     "chai": "^4.3.8",
-    "docdash": "^2.0.1",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
-    "jsdoc": "^4.0.2",
     "mocha": "^10.2.0",
     "nock": "^13.3.3",
     "nyc": "^15.1.0",
     "prettier": "^3.0.2",
+    "typedoc": "^0.25.0",
     "typescript": "^5.2.2"
   },
   "files": [
