--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "files": [],
-  "references": [{ "path": "./tsconfig.lib.json" }, { "path": "./tsconfig.test.json" }]
+  "references": [{ "path": "./tsconfig.lib.json" }, { "path": "./tsconfig.test.json" }],
 }
