--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "oauth": "^0.10.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.0",
     "@tsconfig/node18": "^18.2.4",
     "@tsconfig/strictest": "^2.0.2",
     "@types/chai": "^4.3.5",
@@ -64,6 +66,7 @@
     "chai": "^5.0.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.0.0",
+    "globals": "^15.9.0",
     "mocha": "^10.2.0",
     "nock": "^13.3.3",
     "nyc": "^17.0.0",
